# talos-pilot

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
crates/talos-pilot-core/src/: indicators.rs
crates/talos-pilot-tui/: Cargo.toml
crates/talos-pilot-tui/src/: action.rs  app.rs  audit.rs  lib.rs
crates/talos-pilot-tui/src/components/: cluster.rs  diagnostics.rs  etcd.rs  insecure.rs  lifecycle.rs  mod.rs  multi_logs.rs  network.rs  node_operations.rs  processes.rs  rolling_operations.rs  security.rs  storage.rs
crates/talos-pilot-tui/src/components/diagnostics/: core.rs  k8s.rs  mod.rs  types.rs
crates/talos-pilot-tui/src/components/diagnostics/cni/: mod.rs
crates/talos-rs/: Cargo.toml
crates/talos-rs/src/: auth.rs  client.rs  config.rs  lib.rs  talosctl.rs
docs/: local-talos-setup.md
src/: main.rs
test-clusters/: README.md
test-clusters/scripts/: multi-cluster-test.sh  multi-cp-qemu.sh  multi-endpoint-test.sh  rolling-ops-test.sh  setup-vip-config.sh  test-cluster-qemu.sh  vip-test-setup.sh
